# epigrep

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
apps/epigrep-mcp/: README.md  server.py  test_server.py
apps/epigrep-storyboard/: README.md  app.py
crates/epigrep-core/: Cargo.toml
crates/epigrep-core/benches/: matcher.rs
crates/epigrep-core/src/: explain.rs  json.rs  lib.rs  matcher.rs  model.rs  parser.rs  tests.rs
crates/epigrep-core/tests/: semantic_fixtures.rs
crates/epigrep-py/: Cargo.toml  README.md  pyproject.toml
crates/epigrep-py/python/epigrep/: __init__.py  __main__.py  _core.pyi  agent.py  cli.py  data.py  datasets.py  eventise.py  frame.py  schema.py
crates/epigrep-py/src/: lib.rs
crates/epigrep-py/tests/: test_agent.py  test_cli.py  test_datasets.py  test_docs_snippets.py  test_eventise.py  test_logs_first_examples.py  test_matcher.py  test_panic_safety.py  test_semantic_fixtures.py
docs/: RELEASE-GATE.md  agent-interface.md  cli.md  events-and-partitions.md  explanations.md  getting-started.md  index.md  limitations.md  loading-data.md  logs-first-recipes.md  patterns.md  requirements.txt  semantics.md
examples/logs-first/: config-reload-oom.json  deploy-error-rollback.json  fatal-without-warning.json  repeated-readiness-failure.json  run.py  same-request-capture.json
scripts/: check_version_sync.py
tests/semantic-fixtures/: 01-partition-isolation.json  02-same-timestamp-tiebreak-match.json  03-same-timestamp-tiebreak-no-match.json  04-non-contiguous-match.json  05-inclusive-window-boundary.json  06-window-exceeded.json  07-zero-duration-window.json  08-absence-between-blocks.json  09-absence-between-clear.json  10-capture-and-reference-equality.json  11-missing-attribute-predicate.json  12-numeric-float-predicate.json  13-overlapping-starts-reported.json  14-first-successor-dead-end.json  15-exhaustive-finds-continuation.json  16-absence-with-predicate.json  17-absence-with-captured-reference.json  README.md  _generate.py
