[package]
name = "epigrep-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.6.0"

[[bench]]
name = "matcher"
harness = false
