[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "epigrep"
version = "0.1.0rc1"
description = "Temporal event-pattern matching over partitioned, timestamped event sequences, with explicit semantics and near-miss explanations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rikk Hill" }]
keywords = [
    "temporal",
    "pattern-matching",
    "event-sequences",
    "complex-event-processing",
    "time-series",
    "observability",
    "process-mining",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
frame = ["pandas"]
demo = ["pandas", "streamlit", "altair"]
test = ["pytest", "pandas"]

[project.urls]
Source = "https://github.com/rikkhill/epigrep"
Issues = "https://github.com/rikkhill/epigrep/issues"

[tool.maturin]
module-name = "epigrep._core"
python-source = "python"
features = ["extension-module"]
